--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1"
+  },
+  "dependencies": {
+    "normalize.css": "^7.0.0"
   }
 }
