--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babili-webpack-plugin": "0.0.11",
     "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "optimize-css-assets-webpack-plugin": "^1.3.1",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "uglify-es": "^3.0.4",
+    "uglify-js": "^2.8.23",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
