--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "marcoshenriqueb@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.0.1",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.24.1",
@@ -20,6 +21,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
+    "postcss-loader": "^2.0.5",
     "style-loader": "^0.17.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
