--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "shufflejs": "^4.2.0"
   }
 }
