--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "img": "node build/images.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "marcoshenriqueb@gmail.com",
@@ -18,8 +19,12 @@
     "babel-preset-stage-2": "^6.24.1",
     "babili-webpack-plugin": "0.0.11",
     "css-loader": "^0.28.1",
+    "easyimage": "^2.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "imagemin": "^5.3.1",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-pngquant": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
     "postcss-loader": "^2.0.5",
     "style-loader": "^0.17.0",
