--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 appdirs==1.4.3
+certifi==2017.4.17
+chardet==3.0.3
 Django==1.11.1
+django-instagram==0.2.0a1
+httplib2==0.10.3
+idna==2.5
+lxml==3.7.3
 olefile==0.44
 packaging==16.8
 Pillow==4.1.1
 pyparsing==2.2.0
+python-instagram==1.3.2
 pytz==2017.2
+requests==2.17.3
+simplejson==3.10.0
 six==1.10.0
+sorl-thumbnail==12.4a1
+urllib3==1.21.1
