--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2017.4.17
 chardet==3.0.3
 Django==1.11.1
 django-instagram==0.2.0a1
+gunicorn==19.7.1
 httplib2==0.10.3
 idna==2.5
 lxml==3.7.3
