--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.0.2",
+    "inputmask": "^3.3.7",
     "install": "^0.10.1",
     "normalize.css": "^7.0.0",
     "npm": "^4.6.1",
